--- a/middleware/emailTemplate.html
+++ b/middleware/emailTemplate.html
@@ -13,7 +13,7 @@
             <tr>
                 <!--Padding= top, right, bottom left-->
                 <td align="center" bgcolor=" #F0F0F0 " style="padding: 0px 0 0px 0;"> 
-                     <img src="Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/> 
+                     <img src="http://escgroup1.herokuapp.com/Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/> 
                 </td>
             </tr>
             <tr>
@@ -21,7 +21,7 @@
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                          <td align="center" paddint-bottom="10px">
-                          <img src="portrait.png" alt="Sorry image cannot be displayed." width="150" height="100" style="display:block;"/>
+                          <img src="http://escgroup1.herokuapp.com/portrait.png" alt="Sorry image cannot be displayed." width="150" height="100" style="display:block;"/>
                           <font size= 3px><a href="http://www.linkedin.com/in/chin-tak-ong-6b2a75145" style="color: #000000;"><font color="#4C84E9"></font><b>Ong Chin Tak <br> Vice President, Tech Consulting</b></font>
                          </td>
                         </tr>
@@ -54,17 +54,17 @@
                             <tr>
                                 <td>
                                 <a href="https://www.facebook.com/accenture/">
-                                <img src="social-facebook.svg" alt="Facebook" width="38" height="38" style="display: block;" border="0"/>
+                                <img src="http://escgroup1.herokuapp.com/social-facebook.svg" alt="Facebook" width="38" height="38" style="display: block;" border="0"/>
                                 </a>
                                 </td>
                                 <td>
                                 <a href="https://twitter.com/Accenture?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
-                                <img src="social-twitter.svg" alt="Twitter" width="38" height="38" style="display: block;" border="0"/>
+                                <img src="http://escgroup1.herokuapp.com/social-twitter.svg" alt="Twitter" width="38" height="38" style="display: block;" border="0"/>
                                 </a>
                                 </td>
                                 <td>
                                  <a href="https://www.instagram.com/accenture/?hl=en">
-                                  <img src="instagram.png" alt="Instagram" width="45" height="45" style="display: block;" border="0"/>
+                                  <img src="http://escgroup1.herokuapp.com/instagram.png" alt="Instagram" width="45" height="45" style="display: block;" border="0"/>
                                  </a>
                                 </td>
                             </tr>
