--- a/middleware/verification.html
+++ b/middleware/verification.html
@@ -13,7 +13,7 @@
             <tr>
                 <!--Padding= top, right, bottom left-->
                 <td align="center" bgcolor=" #F0F0F0 " style="padding: 0px 0 0px 0;"> 
-                     <img src="Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/>                    
+                     <img src="http://escgroup1.herokuapp.com/Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/>                    
                 </td>
             </tr>
             <tr>
@@ -52,7 +52,7 @@
                                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tr>
                                                 <td  style="color: #153643; font-family: Arial, sans-serif;font-size: 18px; "bgcolor="#70bbd9">
-                                                <img src="TechVision2019.jpg" alt="" width="100%" height="140" style="display: block;" />
+                                                <img src="http://escgroup1.herokuapp.com/TechVision2019.jpg" alt="" width="100%" height="140" style="display: block;" />
                                                 </td>
                                                 </tr>
     
@@ -74,13 +74,13 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                     <tr>
                                                         <td bgcolor="ee4c50">
-                                                        <img src="wayBeyondMarketing.png" alt="" width="100%" height="140" style="display: block;" />
+                                                        <img src="http://escgroup1.herokuapp.com/wayBeyondMarketing.png" alt="" width="100%" height="140" style="display: block;" />
                                                         </td>
                                                         <tr>
                                                             <td bgcolor=" #F0F0F0 " style="padding: 10px 0 65px 0;">
                                                               <b><font size=5px><u>Way Beyond Marketing</u> <br> <br> </font> </b>
                                                                 <b>Learn more about the rise of the hyper-relevant CMO. <br></b>
-                                                                <a href="https://www.accenture.com/sg-en/insights/consulting/cmo" style="color: #000000;"><font color="#4C84E9" size=3px> <b> Read More --></b> </font></a>
+                                                                <a href="http://escgroup1.herokuapp.com/https://www.accenture.com/sg-en/insights/consulting/cmo" style="color: #000000;"><font color="#4C84E9" size=3px> <b> Read More --></b> </font></a>
                                                             </td>
                                                         </tr>
                                                     </tr>       
@@ -108,17 +108,17 @@
                             <tr>
                                 <td>
                                 <a href="https://www.facebook.com/accenture/">
-                                <img src="social-facebook.svg" alt="Facebook" width="38" height="38" style="display: block;" border="0"/>
+                                <img src="http://escgroup1.herokuapp.com/social-facebook.svg" alt="Facebook" width="38" height="38" style="display: block;" border="0"/>
                                 </a>
                                 </td>
                                 <td>
                                 <a href="https://twitter.com/Accenture?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
-                                <img src="social-twitter.svg" alt="Twitter" width="38" height="38" style="display: block;" border="0"/>
+                                <img src="http://escgroup1.herokuapp.com/social-twitter.svg" alt="Twitter" width="38" height="38" style="display: block;" border="0"/>
                                 </a>
                                 </td>
                                 <td>
                                  <a href="https://www.instagram.com/accenture/?hl=en">
-                                  <img src="instagram.png" alt="Instagram" width="45" height="45" style="display: block;" border="0"/>
+                                  <img src="http://escgroup1.herokuapp.com/instagram.png" alt="Instagram" width="45" height="45" style="display: block;" border="0"/>
                                  </a>
                                 </td>
                             </tr>
