added email verification + requires user to verify account before using pages in ACNAPI

--- a/middleware/verification.html
+++ b/middleware/verification.html
@@ -11,8 +11,8 @@
         <!--600px is a safe width to ensure that the email is able to display fully.-->
            
             <tr>
-                <!--Padding= top, right, bottom left-->
                 <td align="center" bgcolor=" #F0F0F0 " style="padding: 0px 0 0px 0;"> 
+                <!--Padding= top, right, bottom left-->
                      <img src="http://escgroup1.herokuapp.com/Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/>                    
                 </td>
             </tr>
@@ -60,7 +60,7 @@
                                                 <td bgcolor="#F0F0F0" style="padding: 10px 0 0 0;">
                                                  <b><font size=5px><u>Accenture Technology Vision 2019 </u> <br> <br> </font> </b>
                                                  <b>The post-digital era is upon us. We outline five technology trends that will characterize the post-digital future. <br></b> 
-                                                 <a href="https://www.accenture.com/sg-en/insights/technology/technology-trends-2019" style="color: #000000;"><font color="#4C84E9" size=3px> <b> Read More --></b> </font></a>
+                                                 <a href="https://www.accenture.com/sg-en/insights/technology/technology-trends-2019" style="color: #000000;"><font color="#4C84E9" size=3px> <b> Read More</b> </font></a>
                                                 </td>
                                                 </tr>
                                             </table>
@@ -80,7 +80,7 @@
                                                             <td bgcolor=" #F0F0F0 " style="padding: 10px 0 65px 0;">
                                                               <b><font size=5px><u>Way Beyond Marketing</u> <br> <br> </font> </b>
                                                                 <b>Learn more about the rise of the hyper-relevant CMO. <br></b>
-                                                                <a href="http://escgroup1.herokuapp.com/https://www.accenture.com/sg-en/insights/consulting/cmo" style="color: #000000;"><font color="#4C84E9" size=3px> <b> Read More --></b> </font></a>
+                                                                <a href="https://www.accenture.com/sg-en/insights/consulting/cmo" style="color: #000000;"><font color="#4C84E9" size=3px> <b> Read More</b> </font></a>
                                                             </td>
                                                         </tr>
                                                     </tr>       
