--- a/middleware/verification.html
+++ b/middleware/verification.html
@@ -13,7 +13,7 @@
             <tr>
                 <td align="center" bgcolor=" #F0F0F0 " style="padding: 0px 0 0px 0;"> 
                 <!--Padding= top, right, bottom left-->
-                     <img src="http://escgroup1.herokuapp.com/Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/>                    
+                     <img src="http://escgroup-1.herokuapp.com/images/Accenture-logo.png" alt="Sorry image cannot be displayed." width="300" height="150" style="display:block;"/>                    
                 </td>
             </tr>
             <tr>
@@ -27,7 +27,7 @@
                         <tr>
                          <td style="color: #153643; font-family: Arial, sans-serif;font-size: 14px; padding: 10px 0 20px 0">
                           <b> Thank you for registering with Accenture's API portal. Please click                           
-                           <a href="http://escgroup1.herokuapp.com/" style="color: #000000;"><font color="#4C84E9"> 
+                           <a href="http://escgroup-1.herokuapp.com/" style="color: #000000;"><font color="#4C84E9"> 
                                here </font></a> to complete the verification process! </b>
                          </td>
                         </tr>                        
@@ -52,7 +52,7 @@
                                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tr>
                                                 <td  style="color: #153643; font-family: Arial, sans-serif;font-size: 18px; "bgcolor="#70bbd9">
-                                                <img src="http://escgroup1.herokuapp.com/TechVision2019.jpg" alt="" width="100%" height="140" style="display: block;" />
+                                                <img src="http://escgroup-1.herokuapp.com/images/email/TechVision2019.jpg" alt="" width="100%" height="140" style="display: block;" />
                                                 </td>
                                                 </tr>
     
@@ -74,7 +74,7 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                     <tr>
                                                         <td bgcolor="ee4c50">
-                                                        <img src="http://escgroup1.herokuapp.com/wayBeyondMarketing.png" alt="" width="100%" height="140" style="display: block;" />
+                                                        <img src="http://escgroup-1.herokuapp.com/images/email/wayBeyondMarketing.png" alt="" width="100%" height="140" style="display: block;" />
                                                         </td>
                                                         <tr>
                                                             <td bgcolor=" #F0F0F0 " style="padding: 10px 0 65px 0;">
@@ -108,17 +108,17 @@
                             <tr>
                                 <td>
                                 <a href="https://www.facebook.com/accenture/">
-                                <img src="http://escgroup1.herokuapp.com/social-facebook.svg" alt="Facebook" width="38" height="38" style="display: block;" border="0"/>
+                                <img src="http://escgroup-1.herokuapp.com/images/email/social-facebook.svg" alt="Facebook" width="38" height="38" style="display: block;" border="0"/>
                                 </a>
                                 </td>
                                 <td>
                                 <a href="https://twitter.com/Accenture?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
-                                <img src="http://escgroup1.herokuapp.com/social-twitter.svg" alt="Twitter" width="38" height="38" style="display: block;" border="0"/>
+                                <img src="http://escgroup-1.herokuapp.com/images/email/social-twitter.svg" alt="Twitter" width="38" height="38" style="display: block;" border="0"/>
                                 </a>
                                 </td>
                                 <td>
                                  <a href="https://www.instagram.com/accenture/?hl=en">
-                                  <img src="http://escgroup1.herokuapp.com/instagram.png" alt="Instagram" width="45" height="45" style="display: block;" border="0"/>
+                                  <img src="http://escgroup-1.herokuapp.com/images/email/instagram.png" alt="Instagram" width="45" height="45" style="display: block;" border="0"/>
                                  </a>
                                 </td>
                             </tr>
