now users are required to verify their email before using page. also, during registration, Confirm Password field is required  to ensure user do not key their password wrongly the first time

--- a/middleware/verification.html
+++ b/middleware/verification.html
@@ -27,7 +27,7 @@
                         <tr>
                          <td style="color: #153643; font-family: Arial, sans-serif;font-size: 14px; padding: 10px 0 20px 0">
                           <b> Thank you for registering with Accenture's API portal. Please click                           
-                           <a href="http://escgroup-1.herokuapp.com/" style="color: #000000;"><font color="#4C84E9"> 
+                           <a href="http://escgroup-1.herokuapp.com/users/verify/" style="color: #000000;"><font color="#4C84E9"> 
                                here </font></a> to complete the verification process! </b>
                          </td>
                         </tr>                        
